# deepcodex

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: codex-base.yaml  lazycodex-start-work.yaml
results/: README.md  deepswe-codex-results.md
scripts/: run_codex_base.sh  run_lazycodex_start_work.sh  run_smoke_10.sh
src/deepcodex_bench/: __init__.py  agents.py
tests/: test_lazycodex_agent.py
