[project]
name = "deepcodex-bench"
version = "0.1.0"
description = "DeepSWE/Pier benchmark harness for Codex and LazyCodex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datacurve-pier>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

